# txt2epub

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  epub.rs  lib.rs  log.rs  main.rs  parse.rs
src/novel_structure/: chapter.rs  mod.rs  novel.rs  novel_options.rs  part.rs
src/templates/: chapter.html  intro.html  part.html  stylesheet.css
